[Fixes] Added truncation for usernames and fixed button space

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -266,6 +266,7 @@ button.btn, input[type="submit"].btn {
   border-radius: 0 5px 5px 0;
   float: right;
   margin-top: 10px;
+  margin-right: 2px;
   color: white !important;
   i {
     padding-right: 4px;
@@ -439,6 +440,9 @@ button.btn, input[type="submit"].btn {
         &:nth-child(1) {
           font-weight: 700;
           font-size: 16px;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          max-width: 150px;
         }
       }
       .icon-remove {
